--- a/_layouts/unixdbatools.html
+++ b/_layouts/unixdbatools.html
@@ -27,7 +27,9 @@
 									
 								</section>
 							</div>
-
+							<div class="notecomments">
+                                				{% include disqus.html %}
+                        				</div>
 					</section>
 
 
